--- a/man/schaufel.conf.5
+++ b/man/schaufel.conf.5
@@ -127,8 +127,8 @@ Bagger is essentially a producer of the \fIpostgres\fR type. Through the
 replication.
 .PP
 The table of the postgres producer is called \fIdata\fR and only has single
-column. This needs to be able to store text (\fItext\fR and \fIjsonb\fR will
-do).
+column. This needs to be able to store the messages, represented as text
+(\fItext\fR and \fIjsonb\fR will do).
 .RS
 .PP
 producers = (
