man/schaufel.conf.5: fix description of filter exists

--- a/man/schaufel.conf.5
+++ b/man/schaufel.conf.5
@@ -217,7 +217,7 @@ CfCB | CfCB | CfCB.
 filter@description@data
 =
 noop@return true@-
-exists@does the json_pointer point to an existing field@string
+exists@does the json_pointer point to an existing field@-
 match@compare result of json_pointer against a string@string
 substr@find string in result@string
 .TE
