--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,11 @@
-v0.11
- - support for callbacks via metadata (transactional producers)
- - full autoconf build system
- - full endian.h portability
- - full freebsd compatibility
- - deprecated hash_r gnuism
- - deprecated asprintf gnuism
- - various smaller bugfixes
+schaufel (0.11) unstable; urgency=low
+
+  * support for callbacks via metadata (transactional producers) (Closes: #97) 
+  * full autoconf build system
+  * full endian.h portability
+  * full freebsd compatibility
+  * deprecated hash_r gnuism (Closes: #108)
+  * deprecated asprintf gnuism (Closes: #108)
+  * various smaller bugfixes
+
+ -- Robert Abraham <robert@adeven.com>  31 Aug 2022 09:05:00 +0000
