--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+schaufel (0.11.1) unstable; urgency=low
+
+  * debian/control: Updated dependencies from Ubuntu Jammy and Noble
+
+ -- Ops <ops@adjust.com>  13 Sep 2024 10:20:00 +0000
+
 schaufel (0.11) unstable; urgency=low
 
   * support for callbacks via metadata (transactional producers) (Closes: #97) 
