--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+schaufel (0.12) unstable; urgency=low
+
+  * debian/rules: change the service file name
+  * debian/schaufel.service: renamed to debian/schaufel@.service
+  * debian/schaufel@.service: schema changed
+  * debian/schaufel@.service: schema changed
+
+ -- DevOps <devops@adjust.com>  Mon, 25 Aug 2025 12:01:30 +0000
+
 schaufel (0.11.2) unstable; urgency=low
 
   * debian/postinst: Removed static UID/GID
